# token-slayer

./: .claudeignore  .gitignore  CLAUDE.md  LICENSE  README.md  README.tr.md  pyproject.toml  setup.ps1  setup.sh
.github/workflows/: tests.yml
src/cca/: __init__.py  cache.py  cli.py  config_gen.py  dead_code.py  framework.py  git_analyzer.py  graph.py  health.py  mcp_server.py  parser.py  reporter.py  session_monitor.py  token_counter.py
src/cca/lang/: __init__.py  go.py  typescript.py
test-project/: CLAUDE.md  main.py
test-project/app/: __init__.py  config.py
test-project/app/api/: auth.py  orders.py  products.py
test-project/app/db/: connection.py  queries.py
test-project/app/models/: order.py  product.py  user.py
test-project/app/services/: auth_service.py  order_service.py  product_service.py
test-project/app/utils/: formatters.py  pagination.py  validators.py
tests/: conftest.py  test_cache.py  test_cli.py  test_config_gen.py  test_dead_code.py  test_framework.py  test_git_analyzer.py  test_graph.py  test_health.py  test_json_output.py  test_lang.py  test_parser.py  test_quality.py  test_token_counter.py
